Issue #3263246: Local actions stick together on mobile

--- a/styles/base/_regions.scss
+++ b/styles/base/_regions.scss
@@ -77,8 +77,7 @@
         align-items: center;
         margin-block-end: 0;
 
-        .block-page-title-block,
-        .local-actions {
+        .block-page-title-block {
           margin: 0;
         }
       }
